--- a/requirements.txt
+++ b/requirements.txt
@@ -1,134 +1,83 @@
-amqp==2.3.2
-ansible==2.6.3
-astroid==1.6.2
-Babel==0.9.6
-backports.functools-lru-cache==1.5
-backports.ssl-match-hostname==3.5.0.1
-BeautifulSoup==3.2.1
-billiard==3.5.0.4
-blivet==0.61.15.69
-Brlapi==0.6.0
+africastalking==1.1.4
+AfricastalkingGateway==2.0
+amqp==2.2.2
+astroid==2.0.4
+Babel==2.5.3
+beautifulsoup4==4.6.0
+billiard==3.5.0.3
 cached-property==1.5.1
-celery==4.0.2
-certifi==2018.1.18
-cffi==1.6.0
+celery==4.1.0
+certifi==2018.11.29
 chardet==3.0.4
-configobj==4.7.2
-configparser==3.5.0
-configshell-fb==1.1.23
-coverage==3.6b3
-cryptography==1.7.2
-cupshelpers==1.0
-decorator==3.4.0
-di==0.3
-Django==1.11.7
-django-registration==2.2
-django-summernote==0.8.8.2
-django-tastypie==0.14.0
-dnspython==1.12.0
+Click==7.0
+coreapi==2.3.3
+coreapi-cli==1.0.9
+coreschema==0.0.4
+dateutils==0.6.6
+Django==2.0.3
+django-admin-rangefilter==0.3.10
+django-cors-headers==2.4.0
+django-debug-toolbar==1.9.1
+django-debug-toolbar-template-timings==0.9
+django-extensions==2.0.7
+django-filter==2.1.0
+django-guardian==1.4.9
+django-modelcluster==4.2
+django-phonenumber-field==2.0.0
+django-rest-framework-braces==0.2.3
+django-rest-swagger==2.2.0
+django-suit==0.2.26
+django-taggit==0.23.0
+django-treebeard==4.3
+django-twilio==0.9.0
+django-widget-tweaks==1.4.2
+djangorestframework==3.8.2
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==3.3
 docker==3.5.1
 docker-compose==1.22.0
 docker-pycreds==0.3.0
 dockerpty==0.4.1
 docopt==0.6.2
-enum34==1.1.6
-ethtool==0.8
-firstboot==19.5
-fros==1.0
-functools32==3.2.3.post2
-futures==3.2.0
-gssapi==1.2.0
-httplib2==0.9.2
-idna==2.6
-iniparse==0.4
-initial-setup==0.3.9.43
-ipaddress==1.0.16
-IPy==0.75
+draftjs-exporter==2.1.2
+html5lib==1.0.1
+idna==2.7
 isort==4.3.4
-javapackages==1.0.0
-Jinja2==2.7.2
-jmespath==0.9.0
+itypes==1.1.0
+Jinja2==2.10
 jsonschema==2.6.0
-jwcrypto==0.4.2
-kitchen==1.1.1
-kmod==0.1
-kombu==4.2.1
-langtable==0.0.31
+kombu==4.1.0
 lazy-object-proxy==1.3.1
-lxml==3.2.1
-MarkupSafe==0.11
+MarkupSafe==1.1.0
 mccabe==0.6.1
-netaddr==0.7.5
-netifaces==0.10.4
-nltk==3.4
-ntplib==0.3.2
-numpy==1.14.0
-pandas==0.22.0
-paramiko==2.1.1
-passlib==1.6.5
-perf==0.1
-phpmyadmin==0.0.1
-ply==3.4
-policycoreutils-default-encoding==0.1
-pyasn1==0.1.9
-pyasn1-modules==0.0.8
-pycparser==2.14
-pycrypto==2.6.1
-pycups==1.9.63
-pycurl==7.19.0
-pygobject==3.22.0
-pygpgme==0.3
-pyinotify==0.9.4
-pykickstart==1.99.66.18
-pyliblzma==0.5.3
-pylint==1.8.3
-pyOpenSSL==0.13.1
-pyparsing==1.5.6
-pyparted==3.9
-pyserial==2.7
-pysmbc==1.0.13
-python-augeas==0.5.0
-python-dateutil==1.5
-python-dmidecode==3.10.13
-python-keyczar==0.71rc0
-python-ldap==2.4.15
-python-linux-procfs==0.4.9
-python-meh==0.25.2
-python-mimeparse==1.6.0
-python-nss==0.16.0
-python-yubico==1.2.3
-pytz==2016.10
-pyudev==0.15
-pyusb==1.0.0b1
-pyxattr==0.5.1
-PyYAML==3.10
-qrcode==5.0.1
+mysqlclient==1.3.12
+openapi-codec==1.3.2
+phonenumberslite==8.9.4
+Pillow==5.0.0
+psycopg2==2.7.4
+psycopg2-binary==2.7.4
+PyJWT==1.6.1
+pylint==2.1.1
+PySocks==1.6.8
+python-dateutil==2.7.3
+pytz==2018.4
+PyYAML==3.13
 redis==2.10.6
-requests==2.18.4
-rtslib-fb==2.1.63
-schedutils==0.4
-scipy==1.0.0
-seobject==0.1
-sepolicy==1.1
-setroubleshoot==1.1
-singledispatch==3.4.0.3
+requests==2.20.1
+schema==0.6.8
+simplejson==3.16.0
 six==1.11.0
-slip==0.4.0
-slip.dbus==0.4.0
-speedtest-cli==2.0.2
-SSSDConfig==1.16.0
-suds==0.4
-targetcli-fb===2.1.fb46
-termcolor==1.1.0
+sqlparse==0.2.4
 texttable==0.9.1
-urlgrabber==3.10
-urllib3==1.22
-urwid==1.1.1
+twilio==6.12.0
+typed-ast==1.1.0
+Unidecode==1.0.22
+uritemplate==3.0.0
+urllib3==1.24.1
 uWSGI==2.0.15
-vboxapi==1.0
 vine==1.1.4
-virtualenv==15.1.0
-websocket-client==0.46.0
+wagtail==2.2.2
+webencodings==0.5.1
+websocket-client==0.53.0
+Willow==1.1
 wrapt==1.10.11
-yum-langpacks==0.4.2
-yum-metadata-parser==1.1.4
