--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ docker-compose==1.22.0
 docker-pycreds==0.3.0
 dockerpty==0.4.1
 docopt==0.6.2
+docutils==0.14
 draftjs-exporter==2.1.2
 html5lib==1.0.1
 idna==2.7
@@ -49,10 +50,10 @@ kombu==4.1.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
-mysqlclient==1.3.12
 openapi-codec==1.3.2
 phonenumberslite==8.9.4
 Pillow==5.0.0
+pipenv==2018.11.26
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
 PyJWT==1.6.1
@@ -67,6 +68,7 @@ schema==0.6.8
 simplejson==3.16.0
 six==1.11.0
 sqlparse==0.2.4
+suit==2.0.2
 texttable==0.9.1
 twilio==6.12.0
 typed-ast==1.1.0
@@ -74,7 +76,9 @@ Unidecode==1.0.22
 uritemplate==3.0.0
 urllib3==1.24.1
 uWSGI==2.0.15
-vine==1.1.4
+vine==1.2.0
+virtualenv==16.4.3
+virtualenv-clone==0.5.1
 wagtail==2.2.2
 webencodings==0.5.1
 websocket-client==0.53.0
