--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.14
 draftjs-exporter==2.1.2
+gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.7
 isort==4.3.4
